--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,10 @@
-html, body {
-  margin: auto;
-  padding: 0;
+body {
+  section {
+    .container {
+      text-align: center;
+      h1 {
+        color: blue;
+      }
+    }
+  }
 }
