--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 $open: 'Open Sans', sans-serif;
+$raleway: 'Raleway', sans-serif;
 
 .container {
   font-family: $open;
@@ -23,10 +25,18 @@ $open: 'Open Sans', sans-serif;
           letter-spacing: -1px;
         }
       }
+      .nav-list:hover {
+        color: #7dd8d2;
+      }
     }
   }
   .jumbotron {
     background-color: transparent;
     letter-spacing: -1px;
+    h2 {
+      span {
+        font-family: $raleway;
+      }
+    }
   }
 }
