--- a/css/styles.scss
+++ b/css/styles.scss
@@ -39,4 +39,13 @@ $raleway: 'Raleway', sans-serif;
       }
     }
   }
+  .work {
+    .row {
+      .mylift {
+        img {
+          max-width: 100%;
+        }
+      }
+    }
+  }
 }
