--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Lobster+Two');
+@import url('https://fonts.googleapis.com/css?family=Roboto|Taviraj:300,400,500i');
 $open: 'Open Sans', sans-serif;
 $raleway: 'Raleway', sans-serif;
 $lobster: 'Lobster Two', cursive;
+$roboto: 'Roboto', sans-serif;
+$tavi: 'Taviraj', serif;
 
 $primary: #001c33;
 $light: #4A96AD;
@@ -55,18 +58,30 @@ $lightest: #F5F3EE;
           max-width: 100%;
         }
       }
+      .col-md-6 {
+        img {
+          max-width: 100%;
+        }
+      }
     }
   }
   .about {
-    padding: 20px 0;
+    padding: 50px 0;
     background-color: $primary;
-    article {
+    .row {
+      img {
+        border-radius: 100%;
+        height: 180px;
+      }
       p {
+        font-size: 14px;
+        font-family: $roboto;
         text-align: center;
         margin: 10px;
         color: #fff;
         span {
-          font-family: $raleway;
+          margin-right: 6px;
+          font-family: $tavi;
         }
       }
     }
