--- a/css/styles.scss
+++ b/css/styles.scss
@@ -25,11 +25,15 @@ $lightest: #F5F3EE;
         color: #474747;
         text-decoration: none;
         li {
+          transition: .5s;
           margin: 0 12px;
           padding: 5px;
           display: inline-block;
           text-transform: lowercase;
           letter-spacing: -1px;
+        }
+        li:hover {
+          transform: translateY(-5px);
         }
       }
       .nav-list:hover {
@@ -62,11 +66,15 @@ $lightest: #F5F3EE;
       list-style: none;
       li {
         display: inline-block;
-        img {
-          fill: gray;
+        svg {
+          fill: #474747;
           margin: 10px;
           width: 30px;
           border-radius: 5px;
+          transition: .5s;
+        }
+        svg:hover {
+          fill: $primary;
         }
       }
     }
@@ -187,6 +195,7 @@ $lightest: #F5F3EE;
       .col-md-3 {
         img {
           max-width: 100%;
+          border-top-left-radius: 25px;
         }
         img:hover {
           box-shadow: 0 10px 20px rgba(32,48,64,0.19), 0 6px 6px rgba(32,48,64,0.23);
