Fix optimization for load times

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -56,7 +56,7 @@ $lightest: #F5F3EE;
     letter-spacing: -1px;
     padding: 15rem 2rem;
     margin: 0;
-    background-image: url('../assets/background.jpeg');
+    background-image: url('../assets/background.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
