--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,7 +10,7 @@ $primary: #001c33;
 $light: #4A96AD;
 $lightest: #F5F3EE;
 
-.container {
+body {
   font-family: $open;
   color: #474747;
   nav {
