--- a/css/styles.scss
+++ b/css/styles.scss
@@ -65,7 +65,8 @@ body {
     margin: 0;
     background-image: url('../assets/background.jpg');
     background-attachment: fixed;
-    background-position: center;
+    background-position-x: right;
+    background-position-y: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     border-top-left-radius: 25px;
